# photodiode_model

./: main.py  pyproject.toml
components/: photodetector.py
components/light_source_curves/: relative_output_x_wavelength.csv
data/light_source_curves/: relative_output_x_wavelength.csv
data/photodetector_curves/: capacitance_pF_x_reverse_voltage.csv  current_uA_x_illuminance.csv  relative_sensitivity_x_wavelength.csv
photodiode_model/: char_math.py  light_source.py  main.py  photodetector.py
tests/: test.py
